--- a/prototype1/Views/Base.lproj/Main.storyboard
+++ b/prototype1/Views/Base.lproj/Main.storyboard
@@ -20,13 +20,13 @@
                         <viewLayoutGuide key="safeArea" id="uBb-Ac-XjT"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Wng-mO-CJU">
                             <size key="itemSize" width="63" height="63"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="headerReferenceSize" width="50" height="30"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="gKa-Z8-DSX" customClass="MyCollectionViewCell" customModule="prototype1" customModuleProvider="target">
-                                <rect key="frame" x="10" y="10" width="63" height="63"/>
+                                <rect key="frame" x="10" y="40" width="63" height="63"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                     <rect key="frame" x="0.0" y="0.0" width="63" height="63"/>
@@ -57,6 +57,27 @@
                                 </connections>
                             </collectionViewCell>
                         </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="SectionHeader" id="PPA-Uk-OD2" customClass="SectionHeader" customModule="prototype1" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FER-Bq-sQJ">
+                                    <rect key="frame" x="10" y="8" width="355" height="22"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="FER-Bq-sQJ" firstAttribute="top" secondItem="PPA-Uk-OD2" secondAttribute="top" constant="8" id="5NP-6Y-q9L"/>
+                                <constraint firstAttribute="bottom" secondItem="FER-Bq-sQJ" secondAttribute="bottom" id="d3R-ZW-mTZ"/>
+                                <constraint firstAttribute="trailing" secondItem="FER-Bq-sQJ" secondAttribute="trailing" constant="10" id="mHK-wY-DFU"/>
+                                <constraint firstItem="FER-Bq-sQJ" firstAttribute="leading" secondItem="PPA-Uk-OD2" secondAttribute="leading" constant="10" id="sn6-gO-akj"/>
+                            </constraints>
+                            <connections>
+                                <outlet property="label" destination="FER-Bq-sQJ" id="ix6-rU-1jb"/>
+                            </connections>
+                        </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="TVY-vc-OZk" id="Rh7-Rq-NGn"/>
                             <outlet property="delegate" destination="TVY-vc-OZk" id="cqn-Bj-F6c"/>
